--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,34 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Outfit", sans-serif;
 }
 
 
+/*********** Setting styles for main containers *************/
 
+.wrapper {
+    background-color: var(--mainBG);
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.card {
+    background-color: var(--cardBG);
+    width: 320px;
+    border-radius: 15px;
+}
+
+
+.footer {
+    background-color: var(--mainBG);
+}
+
+/*********** Setting styles for text fields *************/
+h1 {
+    color: var(--white);
+}
