--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /*********** Declaring variables *************/
 :root {
-    --softBlue: hsl(215, 51%, 70%);
+    --softBlue: rgb(139, 172, 218);
     --cyan: hsl(178, 100%, 50%);
     --mainBG: hsl(217, 54%, 11%);
     --cardBG: hsl(216, 50%, 16%);
@@ -12,6 +12,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: "Outfit", sans-serif;
 }
 
@@ -22,7 +23,7 @@
     background-color: var(--mainBG);
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     align-items: center;
     justify-content: center;
 }
@@ -30,16 +31,116 @@
 
 .card {
     background-color: var(--cardBG);
-    width: 320px;
+    padding: 25px;
+    width: 340px;
     border-radius: 15px;
 }
 
 
 .footer {
     background-color: var(--mainBG);
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+}
+
+.info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 10px auto 10px auto;
+}
+
+.amount, .time {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+
+/*********** Setting style for images *************/
+
+.equilibrium {
+    border-radius: 10px;
+    width: 100%;
+}
+
+.amount>img, .time>img {
+    margin-right: 10px;
+}
+
+.overlay {
+    position: absolute;
+    border-radius: 10px;
+    display: flex;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: inherit;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--cyan);
+    opacity: 0;
+ }
+
+ .overlay:hover {
+     opacity: 0.5;
+ }
+
+ .overlay:focus {
+    opacity: 0.5;
+}
+ .main-image {
+     position: relative;
+     height: 290px;
+     margin-bottom: 10px;
+ 
+ }
+/*********** Setting style for line *************/
+
+hr {
+    border-style: none;
+    height: 1px;
+    background-color: rgb(139, 172, 218, 0.17);
+    margin: 15px auto 15px auto;
 }
 
 /*********** Setting styles for text fields *************/
 h1 {
     color: var(--white);
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 10px;
 }
+
+p{
+    font-size: 18px;
+    color: var(--softBlue);
+    font-weight: 300;
+}
+
+p>span {
+    color: var(--white);
+}
+
+.amount>p {
+    color: var(--cyan);
+    font-weight: 400;
+    float: right;
+}
+
+.time>p {
+    font-weight: 300;
+    float: right;
+}
+
+.footer a {
+    color: var(--cyan);
+}
+
+.footer>p {
+    color: var(--white);
+}
+
